# Alsong-cpp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/alsongpp/: alsong.h
include/alsongpp/boost/: split.hpp
src/: library.cpp
